// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defines asymmetric unary matchers 1`] = `
expect(received).toEqual(expected) // deep equality

- Expected  - 1
+ Received  + 1

  Object {
-   "value": toBeDivisibleBy<2>,
+   "value": 3,
  }
`;

exports[`defines asymmetric unary matchers that can be prefixed by not 1`] = `
expect(received).toEqual(expected) // deep equality

- Expected  - 1
+ Received  + 1

  Object {
-   "value": not.toBeDivisibleBy<2>,
+   "value": 2,
  }
`;

exports[`defines asymmetric variadic matchers 1`] = `
expect(received).toEqual(expected) // deep equality

- Expected  - 1
+ Received  + 1

  Object {
-   "value": toBeWithinRange<4, 11>,
+   "value": 3,
  }
`;

exports[`defines asymmetric variadic matchers that can be prefixed by not 1`] = `
expect(received).toEqual(expected) // deep equality

- Expected  - 1
+ Received  + 1

  Object {
-   "value": not.toBeWithinRange<1, 3>,
+   "value": 2,
  }
`;

exports[`is available globally when matcher is unary 1`] = `expected 15 to be divisible by 2`;

exports[`is available globally when matcher is variadic 1`] = `expected 15 to be within range 1 - 3`;

exports[`is ok if there is no message specified 1`] = `No message was specified for this matcher.`;

exports[`prints the Symbol into the error message 1`] = `
expect(received).toEqual(expected) // deep equality

- Expected  - 1
+ Received  + 1

  Object {
-   "a": toBeSymbol<Symbol(bar)>,
+   "a": Symbol(foo),
  }
`;
